@@ -1,6 +1,7 @@
 version 0.4
 	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
 	- dentry_open adapted to new 2.6.29 security context - struct cred
+	- added support for "trusted" processes
 
 version 0.3
 	* Frantisek Hrbata <frantisek.hrbata@redirfs.org>
